force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <label>Targets &amp; Achievements</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>