force-app/main/default/objects/Target__c/fields/Achieved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Amount__c</fullName>
    <label>Achieved Amount (in Lacs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>