force-app/main/default/objects/Target__c/fields/Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Score__c</fullName>
    <formula>( ILM_Score__c +  IDW_Score__c )/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>