force-app/main/default/objects/Target__c/fields/IDW_Score__c.field-meta.xml
<CustomField>
    <fullName>IDW_Score__c</fullName>
    <label>IDW Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>