force-app/main/default/objects/Target__c/fields/IDW_Target_Amount_Achieved__c.field-meta.xml
<CustomField>
    <fullName>IDW_Target_Amount_Achieved__c</fullName>
    <label>IDW Target Amount Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>