force-app/main/default/objects/Target__c/fields/ILM_Score__c.field-meta.xml
<CustomField>
    <fullName>ILM_Score__c</fullName>
    <label>ILM Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>