force-app/main/default/objects/Target__c/fields/ILM_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>ILM_Target_Amount__c</fullName>
    <label>ILM Target Amount (in Lacs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>