force-app/main/default/objects/Target__c/fields/Monthly_Insights__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Insights__c</fullName>
    <label>Monthly Insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>