force-app/main/default/objects/Target__c/fields/Reporting_Manager_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_Remarks__c</fullName>
    <label>Reporting Manager Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>