force-app/main/default/objects/Target__c/fields/Skip_Level_Manager_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Skip_Level_Manager_Remarks__c</fullName>
    <label>Skip Level Manager Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>