force-app/main/default/objects/Target__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
                <label>2024-25</label>
            </value>
            <value>
                <fullName>2025</fullName>
                <label>2025-26</label>
            </value>
            <value>
                <fullName>2026</fullName>
                <label>2026-27</label>
            </value>
            <value>
                <fullName>2027</fullName>
                <label>2027-28</label>
            </value>
            <value>
                <fullName>2028</fullName>
                <label>2028-29</label>
            </value>
            <value>
                <fullName>2029</fullName>
                <label>2029-30</label>
            </value>
            <value>
                <fullName>2030</fullName>
                <label>2030-31</label>
            </value>
            <value>
                <fullName>2031</fullName>
                <label>2031-32</label>
            </value>
            <value>
                <fullName>2032</fullName>
                <label>2032-33</label>
            </value>
            <value>
                <fullName>2033</fullName>
                <label>2033-34</label>
            </value>
            <value>
                <fullName>2034</fullName>
                <label>2034-35</label>
            </value>
            <value>
                <fullName>2035</fullName>
                <label>2035-36</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>