force-app/main/default/objects/Target__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Year__c</columns>
    <columns>ILM_Target_Amount__c</columns>
    <columns>Achieved_Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Parent_Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>